--- a/public/views/index.pug
+++ b/public/views/index.pug
@@ -1,4 +1,15 @@
 html
   include head.pug
   body
-    h1= message
+    div.ui.grid
+      div.eight.wide.column
+        table.ui.celled.table
+          thead
+            tr
+              th(colspan='3')
+                p Stock Prices
+          tbody
+            each object in stockData
+              tr
+                td(data-label='Name')= object.name
+                td(data-label='Price')= object.price
