Added buy section

--- a/public/views/app.pug
+++ b/public/views/app.pug
@@ -46,3 +46,12 @@ html
       div.two.wide.column
         div.ui.vertical.divider Trade
       div.four.wide.column
+        div.ui.card
+          div.content
+            div.header AAPL
+          div.content
+            p Some description if possible...
+          div.content
+            div.sub.header 22
+          div.extra.content
+            button.ui.button#buyButton Buy
