Added portfolio integration

--- a/public/views/app.pug
+++ b/public/views/app.pug
@@ -16,7 +16,7 @@ html
                   input#amount(type="text" placeholder="Amount")
                   button.ui.button#addBalanceButton Add Balance
               td.right.aligned
-                button.ui.button Portfolio
+                button.ui.button#portfolioButton Portfolio
     div.ui.grid#dataView
       div.ten.wide.column
         table.ui.celled.table
