--- a/public/views/portfolio.pug
+++ b/public/views/portfolio.pug
@@ -17,7 +17,7 @@ html
           each object in portfolio.aggregatedData
             div.blue.statistic
               div.value= object.count
-              div.label= object._id.stockName
+              div.label= object.stockName
       div.sixteen.wide.column
         table.ui.celled.table
           thead
