--- a/public/views/app.pug
+++ b/public/views/app.pug
@@ -66,7 +66,7 @@ html
             tr
               td.two.wide
                 div.ui.input
-                  input(type='text', placeholder='Stock Name')#sellStockQuantity
+                  input(type='text', placeholder='Stock Name')#sellStockName
               td.right.aligned
                 div.ui.right.action.input
                   input(type='text', placeholder='Quantity')#sellQuantity
