--- a/public/views/app.pug
+++ b/public/views/app.pug
@@ -11,13 +11,16 @@ html
           tbody
             tr
               td.two.wide
+                div.ui.action.input
+                  input#searchStockName(type="text" placeholder="Search stock name")
+                  button.ui.button#searchStockButton Search
+              td.right.aligned
+                button.ui.button#sellModalButton Sell
+                button.ui.button#portfolioButton Portfolio
                 div.ui.action.left.labeled.input
                   div.ui.basic.label#balance= balance
                   input#amount(type="text" placeholder="Amount")
                   button.ui.button#addBalanceButton Add Balance
-              td.right.aligned
-                button.ui.button#sellModalButton Sell
-                button.ui.button#portfolioButton Portfolio
     div.ui.grid#dataView
       div.sixteen.wide.column
         table.ui.celled.table
